tests/type_errors/issorted_variant.nos
# expect: false
# Variants auto-derive Ord (alphabetical by constructor name)
type Color = Red | Green | Blue
main() = [Red, Green, Blue].isSorted()
